# erpnext

./: ..env.prod.swp  .env.dev  .env.prod  .env.staging  .gitignore  .pwd.yml.swp  README.md  apps.json  create_site.sh  drop_site.sh  manage_docker_frappe.sh  nginx.example  ports_in_use.sh  pwd.yml  pwd.yml.bak  pwd.yml.save  start.sh  stop.sh  sync_files.sh
apps/kenya_compliance_via_slade/: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml
apps/kenya_compliance_via_slade/kenya_compliance_via_slade/: hooks.py  modules.txt  patches.txt
apps/kenya_compliance_via_slade/kenya_compliance_via_slade/docs/: architecture.md  customisations.md  dashboard_reports.md  doctypes.md  features.md  setup_configuration.md
apps/kenya_compliance_via_slade/kenya_compliance_via_slade/docs/doctypes/: environment_settings.md  operation_type.md  routes_reference.md
apps/kenya_compliance_via_slade/kenya_compliance_via_slade/docs/features/: imports_fetch.md  item_registration.md  registered_purchases.md  sales_invoice_submission.md  stock_submission.md  supplier_customer_management.md
apps/kenya_compliance_via_slade/kenya_compliance_via_slade/fixtures/: navari_etims_import_item_status.json  navari_etims_item_type.json  navari_etims_product_type.json  navari_etims_purchase_receipt_type.json  navari_etims_routes.json  navari_etims_stock_movement_type.json  navari_etims_transaction_type.json  navari_kra_etims_transaction_progress.json
apps/kenya_compliance_via_slade/kenya_compliance_via_slade/kenya_compliance_via_slade/: handlers.py  utils.py
sites/: apps.json  apps.txt
(+515 files in other folders)
