[project]
name = "kenya_compliance_via_slade"
authors = [
    { name = "Navari", email = "support@navari.co.ke"}
]
description = "Kenya Compliance via Slade360"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
    "aiohttp==3.9.1",
    "deprecation==2.1.0",
    "qrcode==7.4.2",
    "bs4"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.isort]
profile = "black"
line_length = 88
known_frappe = "frappe"
known_erpnext = "erpnext"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FRAPPE", "ERPNEXT", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
combine_as_imports = true

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]  # Known conflicts with Black
exclude = ["node_modules", ".git", "__pycache__"]

[tool.bench.dev-dependencies]
pre-commit = "~=3.7.1"
flake8 = "~=7.1.0"
black = "~=24.4.2"
isort = "~=5.13.2"
flake8-bugbear = "*"
flake8-annotations = "*"
autoflake = "~=2.2.0"
